--- a/src/workerd/util/BUILD.bazel
+++ b/src/workerd/util/BUILD.bazel
@@ -138,6 +138,7 @@ wd_cc_library(
     srcs = ["uuid.c++"],
     hdrs = ["uuid.h"],
     implementation_deps = [
+        ":entropy",
         "@capnp-cpp//src/kj/compat:kj-http",
         "@ssl",
     ],
@@ -243,6 +244,18 @@ wd_cc_library(
 wd_cc_library(
     name = "duration-exceeded-logger",
     hdrs = ["duration-exceeded-logger.h"],
+    visibility = ["//visibility:public"],
+    deps = ["@capnp-cpp//src/kj"],
+)
+
+wd_cc_library(
+    name = "entropy",
+    srcs = ["entropy.c++"],
+    hdrs = ["entropy.h"],
+    implementation_deps = [
+        "@ncrypto",
+        "@ssl",
+    ],
     visibility = ["//visibility:public"],
     deps = ["@capnp-cpp//src/kj"],
 )
