--- a/src/workerd/io/BUILD.bazel
+++ b/src/workerd/io/BUILD.bazel
@@ -90,6 +90,7 @@ wd_cc_library(
         "//src/workerd/api:data-url",
         "//src/workerd/api/node:exceptions",
         "//src/workerd/util:completion-membrane",
+        "//src/workerd/util:entropy",
         "//src/workerd/util:perfetto",
         "//src/workerd/util:string-buffer",
         "//src/workerd/util:uuid",
