--- a/src/workerd/tools/BUILD.bazel
+++ b/src/workerd/tools/BUILD.bazel
@@ -20,13 +20,19 @@ cc_ast_dump(
     deps = [
         "//src/cloudflare",
         "//src/node",
+        "//src/workerd/api:analytics-engine",
+        "//src/workerd/api:base64",
         "//src/workerd/api:html-rewriter",
         "//src/workerd/api:hyperdrive",
+        "//src/workerd/api:kv",
         "//src/workerd/api:memory-cache",
         "//src/workerd/api:r2",
+        "//src/workerd/api:streams",
         "//src/workerd/api:tracing-module",
         "//src/workerd/api:urlpattern",
         "//src/workerd/api:urlpattern-standard",
+        "//src/workerd/api:worker-loader",
+        "//src/workerd/api:workers-module",
         "//src/workerd/api/node",
         "//src/workerd/io",
         "//src/workerd/jsg",
