--- a/src/workerd/server/BUILD.bazel
+++ b/src/workerd/server/BUILD.bazel
@@ -141,8 +141,14 @@ wd_cc_library(
         "workerd-api.h",
     ],
     implementation_deps = [
+        "//src/workerd/api:analytics-engine",
+        "//src/workerd/api:capnp",
+        "//src/workerd/api:kv",
+        "//src/workerd/api:streams",
         "//src/workerd/api:urlpattern",
         "//src/workerd/api:urlpattern-standard",
+        "//src/workerd/api:worker-loader",
+        "//src/workerd/io:promise-wrapper",
     ],
     visibility = ["//visibility:public"],
     deps = [
@@ -193,6 +199,7 @@ wd_cc_library(
         "//src/workerd/api:memory-cache",
         "//src/workerd/api:pyodide",
         "//src/workerd/io",
+        "//src/workerd/io:bundle-fs",
         "//src/workerd/io:trace-stream",
         "//src/workerd/io:worker-entrypoint",
         "//src/workerd/jsg",
