[build] Remove glob from io target api srcs/headers
This will make it easier for developers to remember to define bazel targets as
modules, since they need to add the new files anyway.

--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -6,40 +6,47 @@ load("//:build/wd_test.bzl", "wd_test")
 
 filegroup(
     name = "srcs",
-    srcs = glob(
-        ["**/*.c++"],
+    # Only add files here when needed: Where possible, new src/header files should be defined in
+    # their own targets, modularizing bazel targets makes incremental rebuilds faster.
+    srcs = [
+        "actor.c++",
+        "actor-state.c++",
+        "basics.c++",
+        "blob.c++",
+        "cache.c++",
+        "cf-property.c++",
+        "container.c++",
+        "events.c++",
+        "eventsource.c++",
+        "export-loopback.c++",
+        "filesystem.c++",
+        "form-data.c++",
+        "global-scope.c++",
+        "hibernatable-web-socket.c++",
+        "http.c++",
+        "messagechannel.c++",
+        "performance.c++",
+        "queue.c++",
+        "scheduled.c++",
+        "sockets.c++",
+        "sql.c++",
+        "sync-kv.c++",
+        "system-streams.c++",
+        "trace.c++",
+        "unsafe.c++",
+        "url-standard.c++",
+        "web-socket.c++",
+        "worker-rpc.c++",
+    ] + glob(
+        [
+            "crypto/*.c++",
+            "streams/*.c++",
+        ],
         exclude = [
-            # TODO(cleanup): Continue shrinking the io target: Create independent targets for
-            # analytics-engine, kv and streams/compression, which either do not depend
-            # on io or do not have io depending on them.
             "**/*test*.c++",
-            "data-url.c++",
-            "encoding.c++",
-            "html-rewriter.c++",
-            "hyperdrive.c++",
-            "pyodide/pyodide.c++",
-            "pyodide/setup-emscripten.c++",
-            "pyodide/requirements.c++",
-            "memory-cache.c++",
-            "modules.c++",
-            "r2*.c++",
-            "rtti.c++",
-            "tracing-module.c++",
-            "url.c++",
-            "urlpattern.c++",
-            "urlpattern-standard.c++",
-            "util.c++",
-            "base64.c++",
-            "commonjs.c++",
-            "fuzzilli.c++",
             "crypto/crc-impl.c++",
-            "streams/encoding.c++",
             "streams/compression.c++",
-            "capnp.c++",
-            "workers-module.c++",
-            "kv.c++",
-            "analytics-engine.c++",
-            "worker-loader.c++",
+            "streams/encoding.c++",
         ],
     ),
     visibility = ["//visibility:public"],
@@ -47,41 +54,44 @@ filegroup(
 
 filegroup(
     name = "hdrs",
-    srcs = glob(
-        ["**/*.h"],
+    srcs = [
+        "actor.h",
+        "actor-state.h",
+        "basics.h",
+        "blob.h",
+        "cache.h",
+        "cf-property.h",
+        "container.h",
+        "events.h",
+        "eventsource.h",
+        "export-loopback.h",
+        "filesystem.h",
+        "form-data.h",
+        "global-scope.h",
+        "hibernatable-web-socket.h",
+        "http.h",
+        "messagechannel.h",
+        "performance.h",
+        "queue.h",
+        "scheduled.h",
+        "sockets.h",
+        "sql.h",
+        "sync-kv.h",
+        "system-streams.h",
+        "trace.h",
+        "unsafe.h",
+        "url-standard.h",
+        "web-socket.h",
+        "worker-rpc.h",
+    ] + glob(
+        [
+            "crypto/*.h",
+            "streams/*.h",
+        ],
         exclude = [
-            "**/*test*.h",
-            "data-url.h",
-            "deferred-proxy.h",
-            "encoding.h",
-            "html-rewriter.h",
-            "hyperdrive.h",
-            "memory-cache.h",
-            "pyodide/pyodide.h",
-            "pyodide/setup-emscripten.h",
-            "pyodide/requirements.h",
-            "modules.h",
-            "r2*.h",
-            "rtti.h",
             "crypto/crc-impl.h",
-            "tracing-module.h",
-            "url.h",
-            "urlpattern.h",
-            "urlpattern-standard.h",
-            "util.h",
-            "base64.h",
-            "commonjs.h",
-            "fuzzilli.h",
-            "streams/encoding.h",
-            "streams.h",
             "streams/compression.h",
-            "capnp.h",
-            "workers-module.h",
-            "kv.h",
-            "analytics-engine-impl.h",
-            "analytics-engine.h",
-            "hibernation-event-params.h",
-            "worker-loader.h",
+            "streams/encoding.h",
         ],
     ),
     visibility = ["//visibility:public"],
