--- a/src/workerd/io/BUILD.bazel
+++ b/src/workerd/io/BUILD.bazel
@@ -203,6 +203,7 @@ wd_cc_library(
     deps = [
         ":actor-storage_capnp",
         ":io-gate",
+        ":trace",
         "//src/workerd/jsg:exception",
         "//src/workerd/util:autogate",
         "//src/workerd/util:duration-exceeded-logger",
