--- a/.github/workflows/_wpt.yml
+++ b/.github/workflows/_wpt.yml
@@ -23,6 +23,7 @@ permissions:
 jobs:
   wpt-report:
     runs-on: ${{ inputs.image }}
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
       - name: Download test logs
