--- a/.bazelrc
+++ b/.bazelrc
@@ -15,11 +15,13 @@ common --enable_workspace
 
 # As part of starlarkification, Bazel 8 removes a number of rules which now need to be imported from
 # other repositories. In the long term, load() statements will be needed to import these rules. For
-# now, we can still autoload the affected repositories when needed. Do this only for a few
-# handpicked rules_python rules_shell, and protobuf components instead of the larger default
-# autoload set – some dependencies aren't importing the required shell rules yet, but we don't want
-# to accidentally rely on autoloading more dependencies.
-build --incompatible_autoload_externally="+py_binary,+py_library,+ProtoInfo,+sh_binary,+proto_library,+cc_proto_library"
+# now, we can still autoload the affected repositories when needed. Do this only for a remaining
+# protobuf components instead of the larger default autoload set – perfetto isn't importing all
+# required rules yet, but we don't want to accidentally rely on autoloading more dependencies.
+common --incompatible_autoload_externally="+ProtoInfo"
+
+# Bazel 9 forward compatibility: Disable native repo rules.
+build --incompatible_disable_native_repo_rules
 
 # bazel7 enables Build without the Bytes (BwoB) by default. This significantly speeds up builds
 # using the remote cache since less data needs to be fetched.
