[nfc] Clean up mapCopyString

--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -493,6 +493,7 @@ wd_cc_library(
     deps = [
         ":url",
         "//src/workerd/jsg",
+        "//src/workerd/util:own-util",
         "@capnp-cpp//src/kj",
     ],
 )
