Add some tests of encodeinto for short output buffers.
The existing coverage is pretty good for larger
output buffers, this ensures we get the very
short ones right without chopping surrogate pairs.

--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -582,6 +582,13 @@ kj_test(
 )
 
 kj_test(
+    src = "encoding-test.c++",
+    deps = [
+        ":encoding",
+    ],
+)
+
+kj_test(
     src = "base64-test.c++",
     deps = ["//src/workerd/tests:test-fixture"],
 )
