[nfc] Clean up io includes
Preparing for header IWYU.

--- a/src/workerd/io/BUILD.bazel
+++ b/src/workerd/io/BUILD.bazel
@@ -278,7 +278,7 @@ wd_cc_library(
     hdrs = ["limit-enforcer.h"],
     visibility = ["//visibility:public"],
     deps = [
-        ":observer",
+        ":outcome_capnp",
         "//src/workerd/jsg",
     ],
 )
