--- a/deps/rust/crates/BUILD.cc-1.2.47.bazel
+++ b/deps/rust/crates/BUILD.cc-1.2.47.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "hashbrown",
+    name = "cc",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,29 +29,38 @@ rust_library(
         ],
     ),
     crate_features = [
-        "allocator-api2",
-        "default",
-        "default-hasher",
-        "equivalent",
-        "inline-more",
-        "raw-entry",
+        "parallel",
     ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=hashbrown",
+        "crate-name=cc",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.16.0",
+    version = "1.2.47",
     deps = [
-        "@crates_vendor__allocator-api2-0.2.21//:allocator_api2",
-        "@crates_vendor__equivalent-1.0.2//:equivalent",
-        "@crates_vendor__foldhash-0.2.0//:foldhash",
-    ],
+        "@crates_vendor__find-msvc-tools-0.1.5//:find_msvc_tools",
+        "@crates_vendor__jobserver-0.1.34//:jobserver",
+        "@crates_vendor__shlex-1.3.0//:shlex",
+    ] + select({
+        "@rules_rust//rust/platform:aarch64-apple-darwin": [
+            "@crates_vendor__libc-0.2.177//:libc",  # aarch64-apple-darwin
+        ],
+        "@rules_rust//rust/platform:aarch64-unknown-linux-gnu": [
+            "@crates_vendor__libc-0.2.177//:libc",  # aarch64-unknown-linux-gnu
+        ],
+        "@rules_rust//rust/platform:x86_64-apple-darwin": [
+            "@crates_vendor__libc-0.2.177//:libc",  # x86_64-apple-darwin
+        ],
+        "@rules_rust//rust/platform:x86_64-unknown-linux-gnu": [
+            "@crates_vendor__libc-0.2.177//:libc",  # x86_64-unknown-linux-gnu
+        ],
+        "//conditions:default": [],
+    }),
 )
