--- a/src/workerd/io/BUILD.bazel
+++ b/src/workerd/io/BUILD.bazel
@@ -108,6 +108,7 @@ wd_cc_library(
         ":io-helpers",
         ":limit-enforcer",
         ":observer",
+        ":span-operation",
         ":supported-compatibility-date",
         ":trace",
         ":worker-interface",
