--- a/deps/rust/crates/BUILD.js-sys-0.3.83.bazel
+++ b/deps/rust/crates/BUILD.js-sys-0.3.83.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "wasm_bindgen_macro_support",
+    name = "js_sys",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -35,17 +35,14 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen-macro-support",
+        "crate-name=js-sys",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.105",
+    version = "0.3.83",
     deps = [
-        "@crates_vendor__bumpalo-3.19.0//:bumpalo",
-        "@crates_vendor__proc-macro2-1.0.103//:proc_macro2",
-        "@crates_vendor__quote-1.0.42//:quote",
-        "@crates_vendor__syn-2.0.111//:syn",
-        "@crates_vendor__wasm-bindgen-shared-0.2.105//:wasm_bindgen_shared",
+        "@crates_vendor__once_cell-1.21.3//:once_cell",
+        "@crates_vendor__wasm-bindgen-0.2.106//:wasm_bindgen",
     ],
 )
