--- a/deps/rust/crates/BUILD.tracing-attributes-0.1.31.bazel
+++ b/deps/rust/crates/BUILD.tracing-attributes-0.1.31.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_library")
+load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_library(
-    name = "js_sys",
+rust_proc_macro(
+    name = "tracing_attributes",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,20 +29,21 @@ rust_library(
         ],
     ),
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=js-sys",
+        "crate-name=tracing-attributes",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.3.82",
+    version = "0.1.31",
     deps = [
-        "@crates_vendor__once_cell-1.21.3//:once_cell",
-        "@crates_vendor__wasm-bindgen-0.2.105//:wasm_bindgen",
+        "@crates_vendor__proc-macro2-1.0.103//:proc_macro2",
+        "@crates_vendor__quote-1.0.42//:quote",
+        "@crates_vendor__syn-2.0.111//:syn",
     ],
 )
