--- a/deps/rust/crates/BUILD.tracing-core-0.1.35.bazel
+++ b/deps/rust/crates/BUILD.tracing-core-0.1.35.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
+load("@rules_rust//rust:defs.bzl", "rust_library")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_proc_macro(
-    name = "zerocopy_derive",
+rust_library(
+    name = "tracing_core",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,22 +28,24 @@ rust_proc_macro(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "once_cell",
+        "std",
+    ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=zerocopy-derive",
+        "crate-name=tracing-core",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.8.28",
+    version = "0.1.35",
     deps = [
-        "@crates_vendor__proc-macro2-1.0.103//:proc_macro2",
-        "@crates_vendor__quote-1.0.42//:quote",
-        "@crates_vendor__syn-2.0.111//:syn",
+        "@crates_vendor__once_cell-1.21.3//:once_cell",
     ],
 )
