--- a/deps/rust/crates/BUILD.wasm-bindgen-macro-support-0.2.106.bazel
+++ b/deps/rust/crates/BUILD.wasm-bindgen-macro-support-0.2.106.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "tracing_core",
+    name = "wasm_bindgen_macro_support",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,24 +28,24 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "once_cell",
-        "std",
-    ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=tracing-core",
+        "crate-name=wasm-bindgen-macro-support",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.1.34",
+    version = "0.2.106",
     deps = [
-        "@crates_vendor__once_cell-1.21.3//:once_cell",
+        "@crates_vendor__bumpalo-3.19.0//:bumpalo",
+        "@crates_vendor__proc-macro2-1.0.103//:proc_macro2",
+        "@crates_vendor__quote-1.0.42//:quote",
+        "@crates_vendor__syn-2.0.111//:syn",
+        "@crates_vendor__wasm-bindgen-shared-0.2.106//:wasm_bindgen_shared",
     ],
 )
