--- a/deps/rust/crates/BUILD.zerocopy-0.8.30.bazel
+++ b/deps/rust/crates/BUILD.zerocopy-0.8.30.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "wasm_bindgen",
+    name = "zerocopy",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,27 +29,24 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "simd",
+    ],
     crate_root = "src/lib.rs",
     edition = "2021",
-    proc_macro_deps = [
-        "@crates_vendor__wasm-bindgen-macro-0.2.105//:wasm_bindgen_macro",
-    ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen",
+        "crate-name=zerocopy",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.105",
+    version = "0.8.30",
     deps = [
-        "@crates_vendor__cfg-if-1.0.4//:cfg_if",
-        "@crates_vendor__once_cell-1.21.3//:once_cell",
-        "@crates_vendor__wasm-bindgen-0.2.105//:build_script_build",
-        "@crates_vendor__wasm-bindgen-shared-0.2.105//:wasm_bindgen_shared",
+        "@crates_vendor__zerocopy-0.8.30//:build_script_build",
     ],
 )
 
@@ -59,9 +56,6 @@ cargo_build_script(
         include = ["**/*.rs"],
         allow_empty = True,
     ),
-    aliases = {
-        "@crates_vendor__rustversion-1.0.22//:rustversion": "rustversion_compat",
-    },
     compile_data = glob(
         include = ["**"],
         allow_empty = True,
@@ -75,6 +69,9 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "simd",
+    ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
     data = glob(
@@ -90,24 +87,18 @@ cargo_build_script(
         ],
     ),
     edition = "2021",
-    link_deps = [
-        "@crates_vendor__wasm-bindgen-shared-0.2.105//:wasm_bindgen_shared",
-    ],
-    pkg_name = "wasm-bindgen",
-    proc_macro_deps = [
-        "@crates_vendor__rustversion-1.0.22//:rustversion",
-    ],
+    pkg_name = "zerocopy",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen",
+        "crate-name=zerocopy",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.105",
+    version = "0.8.30",
     visibility = ["//visibility:private"],
 )
 
