--- a/deps/rust/crates/BUILD.zerocopy-derive-0.8.30.bazel
+++ b/deps/rust/crates/BUILD.zerocopy-derive-0.8.30.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
 package(default_visibility = ["//visibility:public"])
 
 rust_proc_macro(
-    name = "tracing_attributes",
+    name = "zerocopy_derive",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,18 +29,18 @@ rust_proc_macro(
         ],
     ),
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=tracing-attributes",
+        "crate-name=zerocopy-derive",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.1.30",
+    version = "0.8.30",
     deps = [
         "@crates_vendor__proc-macro2-1.0.103//:proc_macro2",
         "@crates_vendor__quote-1.0.42//:quote",
