--- a/src/workerd/jsg/BUILD.bazel
+++ b/src/workerd/jsg/BUILD.bazel
@@ -21,6 +21,7 @@ wd_cc_library(
         ":jsg-core",
         ":memory-tracker",
         ":url",
+        "//src/rust/jsg",
         "//src/workerd/util",
         "//src/workerd/util:sentry",
         "//src/workerd/util:thread-scopes",
@@ -117,6 +118,10 @@ wd_cc_library(
     ],
     local_defines = ["JSG_IMPLEMENTATION"],
     tags = ["no-clang-tidy"],
+    visibility = [
+        "//src/rust/jsg:__pkg__",
+        "//src/rust/jsg-test:__pkg__",
+    ],
     deps = [
         ":exception",
         ":exception_metadata_capnp",
