Add "requires-container-engine" tag to oci_image targets
This will prevent these targets from building in configurations that
can't (or don't) run container tests.

--- a/images/container-client-test/BUILD.bazel
+++ b/images/container-client-test/BUILD.bazel
@@ -19,6 +19,9 @@ oci_image(
     base = "@node_25_slim",
     cmd = ["/{}/app".format(package_name())],
     exposed_ports = ["8080"],
+    tags = [
+        "requires-container-engine",
+    ],
     tars = [
         ":layers",
     ],
