Move container-client-test image dependencies into separate pnpm package

--- a/images/container-client-test/BUILD.bazel
+++ b/images/container-client-test/BUILD.bazel
@@ -1,10 +1,13 @@
 load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_image_layer")
+load("@npm//:defs.bzl", "npm_link_all_packages")
 load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
+
+npm_link_all_packages(name = "node_modules")
 
 js_binary(
     name = "app",
     chdir = package_name(),
-    data = ["//:node_modules/ws"],
+    data = [":node_modules/ws"],
     entry_point = "app.js",
 )
 
