Mark oci_image rule as only compatible with Linux

--- a/images/BUILD.bazel
+++ b/images/BUILD.bazel
@@ -15,5 +15,7 @@ IMAGES = {
 multirun(
     name = "load_all",
     commands = IMAGES.keys(),
-    tags = ["no-remote"],
+    tags = [
+        "no-remote",
+    ],
 )
