--- a/src/workerd/api/tests/BUILD.bazel
+++ b/src/workerd/api/tests/BUILD.bazel
@@ -554,3 +554,9 @@ wd_test(
     args = ["--experimental"],
     data = ["headers-immutable-prototype-test.js"],
 )
+
+wd_test(
+    src = "v8-temporal-test.wd-test",
+    args = ["--experimental"],
+    data = ["v8-temporal-test.js"],
+)
